# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added http-get by Alex Weber. This script looks for a .git
  repository directory accesible over HTTP and extracts useful
  information from it.

o [NSE] Fixed some bugs in snmp-interfaces which prevented the script from
  outputting discovered interface info and caused it to abort in the
  pre-scanning phase. [jah]

o [NSE] lltd-discovery scripts now parses for hostnames and outputs network
  card manufacturer. [Hani Benhabiles]

o [NSE] Complete change to sip-enum-users script which now uses brute.lua for
  enumeration and supports iterating over custom username lists and numeric
  ranges. [Hani Benhabiles]

o Added protocol specific payloads for IPv6 hop-by-hop (0x00), routing (0x2b),
  fragment (0x2c), and destination (0x3c). [Sean Rivera] 

o [NSE] Added http-slowloris script which performes a slowloris DoS attack
  against a Web server and reports if it's vulnerable or not. [Aleksandar Nikolic]

o Added a new --disable-arp-ping option. This option prevents Nmap
  from implicitly using ARP or ND host discovery for directly
  connected Ethernet targets. This is useful in networks using proxy
  ARP, which make all addresses appear to be up using ARP scan. The
  previously recommended workaround for this situation, --send-ip,
  didn't work on Windows because there are not raw sockets on Windows.
  [David Fifield]

o [NSE] Added support for decoding OSPF Hello packets to broadcast-listener.
  [Hani Benhabiles]

o [NSE] Added ospf library which handles OSPFv2 packets.
  [Patrik Karlsson]

o [NSE] Fixed a false positive in http-vuln-cve2011-3192.nse, which detected
  Apache 2.2.22 as vulnerable. [Michael Meyer]

o [NSE] Added changes to brute and unpwdb libraries to allow more flexible iterator
  specification and control. [Aleksandar Nikolic]

o [NSE] Added ms-sql-dac script which queries the Microsoft SQL Browser service
  for the DAC (Dedicated Admin Connection) port. [Patrik Karlsson]
