@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [Zenmap] Fixed a crash when using the en_NG locale: "ValueError:
+  unknown locale: en_NG" [David Fifield]
+
 o [NSE] Added http-get by Alex Weber. This script looks for a .git
   repository directory accesible over HTTP and extracts useful
   information from it.
